# hdiff

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: diff.rs  html.rs  main.rs
tests/: integration.rs
